--- a/JSONGenerator/views/dashboard.html
+++ b/JSONGenerator/views/dashboard.html
@@ -21,7 +21,7 @@
                             <button class="btn btn-primary all-btn" ng-click="openNext();">Create Model</button>
                         </div>
                         <div class="scroll">
-                            <pre>{{jsontext | json}}</pre>
+                            <pre>{{json | json}}</pre>
                         </div>
                         <!--Add New Tags-->
                         <div class="text-center" style="padding-bottom:20px;">
