testing array,radio,checkbox

--- a/JSONGenerator/views/directive/array.html
+++ b/JSONGenerator/views/directive/array.html
@@ -3,16 +3,18 @@
 <table class="table table-bordered">
     <thead>
         <tr>
-            <td ng-repeat="objKey in GalleryStrucObj.keyOf">{{objKey}}</td>
+            <td ng-repeat="objKey in keyOfArr">{{objKey}}</td>
             <td>Action</td>
         </tr>
     </thead>
     <tbody>
-        <tr ng-repeat="objVal in GalleryStrucObj.valuesOf" ng-init="outerIndex=$index;">
-            <td ng-repeat="objKey in GalleryStrucObj.keyOf ">
-                <input type="text" class="form-control" createovalidation='GalleryStrucObj' objkey="{{$index}}" ng-model="objVal[objKey]" placeholder="{{objKey}}">
+        <tr ng-repeat="objVal in GalleryStrucObj.valuesOf track by $index" ng-init="outerIndex=$index;">
+            <td ng-repeat="objKey in GalleryStrucObj.keyOf track by $index">
+                <input type="text" class="form-control" createovalidation='GalleryStrucObj' objkey="{{$index}}" ng-model="objVal[objKey]" placeholder="{{objKey}}" ng-if="GalleryStrucObj.structure[$index].type=='text'">
+                <input type="date" class="form-control" createovalidation='GalleryStrucObj' objkey="{{$index}}" ng-model="objVal[objKey]" placeholder="{{objKey}}" ng-if="GalleryStrucObj.structure[$index].type=='date'">
+                <input type="number" class="form-control" createovalidation='GalleryStrucObj' objkey="{{$index}}" ng-model="objVal[objKey]" placeholder="{{objKey}}" ng-if="GalleryStrucObj.structure[$index].type=='number'">
+                <select class="form-control" ng-options="option._id as option.name for option in GalleryStrucObj.structure[$index].options" ng-model="objVal[objKey]" ng-if="GalleryStrucObj.structure[$index].type=='select'"></select>
             </td>
-           
             <td>
                 <input class="btn btn-danger" type="button" ng-click="GalleryStrucObj.remove(objVal);" value="Delete">
             </td>
