--- a/JSONGenerator/views/models.html
+++ b/JSONGenerator/views/models.html
@@ -16,7 +16,7 @@
                             <input type='text' class='form-control' ng-model='json.pagename' placeholder='Page Name'>
                         </div>
                         <div class="withborder">
-                            <array objval='DefaultStructure' label='Elements : radio and checkbox not Allowed.' editval='json.default'></array>
+                            <array objval='DefaultStructure' label='Elements : Input type.' editval='json.default'></array>
                         </div>
                         <div class="withborder">
                             <array objval='UiSelect' label='Elements : UiSelect.' editval='json.uiselect'></array>
