--- a/JSONGenerator/views/models.html
+++ b/JSONGenerator/views/models.html
@@ -2,7 +2,6 @@
     <h2 class="title">
 </h2>
     <div class="page">
-
         <div class="row">
             <div class="col-md-12">
                 <section class="panel panel-default" style="border-radius:0px;">
@@ -10,13 +9,32 @@
                     </div>
                     <div class="panel-body">
                         <!--                        <form name="form_constraints" class="form-validation" data-ng-submit="submitForm()">-->
-
                         <div class='form-group'>
                             <label>Page Name</label>
                             <input type='text' class='form-control' ng-model='json.pagename' placeholder='Page Name'>
                         </div>
                         <div class="withborder">
                             <array objval='DefaultStructure' label='Elements : Input type.' editval='json.default'></array>
+                        </div>
+                        <label>Radio or Checkbox</label>
+                        <div class="withborder">
+                            <div ng-repeat="radio in json.radiocheck track by $index">
+                                <hr ng-if=$index!=0 style="border-top: 2px solid #5CB85C;">
+                                <div class="form-group">
+                                    <button class="btn btn-primary all-btn" style="float:right" ng-click="deleteRadioCheck($index)">Delete</button>
+                                    <br>
+                                    <label>Order</label>
+                                    <input type='text' class='form-control' ng-model="radio.order" placeholder='Order'>
+                                </div>
+                                <div class="form-group">
+                                    <label>Name</label>
+                                    <input type='text' class='form-control' ng-model='radio.headname' placeholder='Name'>
+                                </div>
+                                <array objval='RadioCheckStructure' label='Elements : Radio or Checkbox.' editval='radio.radiocheck'></array>
+                            </div>
+                            <div class="text-center">
+                                <button class="btn btn-primary all-btn" ng-click="addRadioCheck()">Add Radio or Checkbox</button>
+                            </div>
                         </div>
                         <div class="withborder">
                             <array objval='UiSelect' label='Elements : UiSelect.' editval='json.uiselect'></array>
