--- a/JSONGenerator/views/models.html
+++ b/JSONGenerator/views/models.html
@@ -16,6 +16,9 @@
                         <div class="withborder">
                             <array objval='DefaultStructure' label='Elements : Input type.' editval='json.default'></array>
                         </div>
+                        <div class="withborder">
+                            <array objval='ImageStructure' label='Elements : Image.' editval='json.image'></array>
+                        </div>
                         <label>Radio or Checkbox</label>
                         <div class="withborder">
                             <div ng-repeat="radio in json.radiocheck track by $index">
